--- a/07_02/index.html
+++ b/07_02/index.html
@@ -6,5 +6,6 @@
     <title>Console demo</title>
     <script src="script.js" defer></script>
   </head>
+  <link rel="stylesheet" href="pag2.html"
   <body></body>
 </html>
